# gold-api

./: README.md  gold-api.yaml  lambda.yml  old.py  pyproject.toml
.github/workflows/: main.yml
gold_api/: api.py  bucket_data.py  ddb_data.py  geo.py  lambda_function.py
tests/: test_api.py  test_bucket_data.py  test_lambda.py
