[tool.poetry]
name = "gold-api"
version = "0.1.0"
description = ""
authors = ["jcable <julian.cable@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
graphene = "^3.3"
bng-latlon = "^1.1"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.58"
pytest = "^7.4.2"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
